catkin_ws/logs/backend/build.make.1090.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:337:4: warning: multi-line comment [-Wcomment]
    // cv::drawMatches(frame1.getGray(),frame1.getKeypoints(),frame2.getGray(),frame2.getKeypoints(), matches, \
    ^
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:7:0:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h: In constructor ‘SLAM::Frame::Frame(boost::shared_ptr<cv::Mat>&, boost::shared_ptr<cv::Mat>&, boost::shared_ptr<cv::Mat>&, boost::shared_ptr<double>&)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:247:26: warning: ‘SLAM::Frame::newNodeFlag’ will be initialized after [-Wreorder]
  boost::shared_ptr<bool> newNodeFlag;
                          ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:246:26: warning:   ‘boost::shared_ptr<bool> SLAM::Frame::dummyFrameFlag’ [-Wreorder]
  boost::shared_ptr<bool> dummyFrameFlag; 
                          ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:18:1: warning:   when initialized here [-Wreorder]
 Frame::Frame(boost::shared_ptr<cv::Mat>& rgbImage, boost::shared_ptr<cv::Mat>& grayImage, boost::shared_ptr<cv::Mat>& depthImage, boost::shared_ptr<double>& timeStamp)
 ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/RANSACBasedTME.cpp: In member function ‘virtual bool SLAM::RANSACBasedTME::estimateTrafo(const std::vector<Eigen::Matrix<float, 3, 1> >&, const std::vector<int>&, const std::vector<Eigen::Matrix<float, 3, 1> >&, const std::vector<int>&, Eigen::Matrix4f&, Eigen::Matrix<double, 6, 6>&, std::vector<int>&) const’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/RANSACBasedTME.cpp:239:20: warning: variable ‘tmOld’ set but not used [-Wunused-but-set-variable]
    Eigen::Matrix4f tmOld = transfMat;
                    ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::parallelMatching()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:556:8: warning: variable ‘prevId’ set but not used [-Wunused-but-set-variable]
    int prevId = -1;
        ^
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Backend.cpp:13:0:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Backend.h:25:24: error: ‘Frame’ does not name a type
  void setNewNode(const Frame& frame, const Eigen::Matrix4f& tm, const Eigen::Matrix<float, 6, 6>& im, uint8_t toNode); // copy
                        ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Backend.h:25:31: error: ISO C++ forbids declaration of ‘frame’ with no type [-fpermissive]
  void setNewNode(const Frame& frame, const Eigen::Matrix4f& tm, const Eigen::Matrix<float, 6, 6>& im, uint8_t toNode); // copy
                               ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Backend.cpp: In constructor ‘Backend::Backend(int, boost::mutex&)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Backend.cpp:21:133: error: ‘Frame’ has not been declared
  : server(port), protocolHandler(&server), sEdge(rowsTm*colsTm*sizeTypeTm + rowsIm*colsIm*sizeTypeIm + sizeof(double) + 1), sRgbImg(Frame::rows*Frame::cols*3), sDepthImg(Frame::rows*Frame::cols*2), backendMutex(mutex), sTm(rowsTm*colsTm*sizeTypeTm)
                                                                                                                                     ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Backend.cpp:21:145: error: ‘Frame’ has not been declared
  : server(port), protocolHandler(&server), sEdge(rowsTm*colsTm*sizeTypeTm + rowsIm*colsIm*sizeTypeIm + sizeof(double) + 1), sRgbImg(Frame::rows*Frame::cols*3), sDepthImg(Frame::rows*Frame::cols*2), backendMutex(mutex), sTm(rowsTm*colsTm*sizeTypeTm)
                                                                                                                                                 ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Backend.cpp:21:171: error: ‘Frame’ has not been declared
  : server(port), protocolHandler(&server), sEdge(rowsTm*colsTm*sizeTypeTm + rowsIm*colsIm*sizeTypeIm + sizeof(double) + 1), sRgbImg(Frame::rows*Frame::cols*3), sDepthImg(Frame::rows*Frame::cols*2), backendMutex(mutex), sTm(rowsTm*colsTm*sizeTypeTm)
                                                                                                                                                                           ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Backend.cpp:21:183: error: ‘Frame’ has not been declared
  : server(port), protocolHandler(&server), sEdge(rowsTm*colsTm*sizeTypeTm + rowsIm*colsIm*sizeTypeIm + sizeof(double) + 1), sRgbImg(Frame::rows*Frame::cols*3), sDepthImg(Frame::rows*Frame::cols*2), backendMutex(mutex), sTm(rowsTm*colsTm*sizeTypeTm)
                                                                                                                                                                                       ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Backend.cpp: At global scope:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Backend.cpp:42:32: error: ‘Frame’ does not name a type
 void Backend::setNewNode(const Frame& frame, const Eigen::Matrix4f& tm, const Eigen::Matrix<float, 6, 6>& im, uint8_t toNode)
                                ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Backend.cpp:42:39: error: ISO C++ forbids declaration of ‘frame’ with no type [-fpermissive]
 void Backend::setNewNode(const Frame& frame, const Eigen::Matrix4f& tm, const Eigen::Matrix<float, 6, 6>& im, uint8_t toNode)
                                       ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Backend.cpp: In member function ‘void Backend::setNewNode(const int&, const Matrix4f&, const Eigen::Matrix<float, 6, 6>&, uint8_t)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Backend.cpp:50:27: error: request for member ‘getTime’ in ‘frame’, which is of non-class type ‘const int’
  serializeTimeStamp(frame.getTime(),sEdge);
                           ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Backend.cpp:57:20: error: request for member ‘getDepth’ in ‘frame’, which is of non-class type ‘const int’
  encodeImage(frame.getDepth(),sDepthImg);
                    ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Backend.cpp:61:20: error: request for member ‘getRgb’ in ‘frame’, which is of non-class type ‘const int’
  encodeImage(frame.getRgb(),sRgbImg);
                    ^
make[2]: *** [CMakeFiles/frontend.dir/src/Backend.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
